[metadata]
name = ppf-noisetools
version = 0.3.1.dev0
description = tools for noise analysis
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.noisetools/tree/master
author = Adrian Schlatter
license = GPL
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = python, math, noise, signal

[options]
python_requires = >=3
package_dir = 
	= src
packages = find_namespace:
install_requires =
    numpy>=1.8.2,<2

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    pytest
    check-manifest
    flake8
    coverage
dev =
    tox
    twine

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**
